--- a/monuments.html
+++ b/monuments.html
@@ -11,11 +11,11 @@
     <header>
         <nav>
             <ul>
-                <li><a href="file:///L:/LinguaxesDeMarcas/Tasks/Task2UD2/index.html">Main Page</a></li>
-                <li><a href="file:///L:/LinguaxesDeMarcas/Tasks/Task2UD2/historyandlegends.html">History and Legends</a></li>
-                <li><a href="file:///L:/LinguaxesDeMarcas/Tasks/Task2UD2/toponomy.html">Toponomy</a></li>
-                <li><a href="file:///L:/LinguaxesDeMarcas/Tasks/Task2UD2/notablepeople.html">Notable people</a></li>
-                <li><a href="file:///L:/LinguaxesDeMarcas/Tasks/Task2UD2/monuments.html">Monuments</a></li>
+                <li><a href="index.html">Main Page</a></li>
+                <li><a href="historyandlegends.html">History and Legends</a></li>
+                <li><a href="toponomy.html">Toponomy</a></li>
+                <li><a href="notablepeople.html">Notable people</a></li>
+                <li><a href="monuments.html">Monuments</a></li>
             </ul>
         </nav>
     </header>
